--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.container::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Edge */
+  }
